--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-bokeh>=0.12.6
-matplotlib
-numpy
-requests
-tornado
+bokeh==0.13.0
+matplotlib==2.2.2
+numpy==1.15.0
+requests==2.19.1
+tornado==5.1
